gap fix

--- a/src/components/css/Contacts.css
+++ b/src/components/css/Contacts.css
@@ -37,16 +37,18 @@
   align-items: center;
   cursor: pointer;
   text-align: center;
-  gap: 1rem;
+  /* gap: 1rem; */
 }
 .contact-items:hover {
   background-color: white;
   border-radius: 10px;
   color: black;
 }
+
 .contacts img {
   height: 25px;
   width: 25px;
+  margin-right: 1rem;
 }
 
 .map-holder {
